Adding Recycler View for Profiles and data retrieval.

--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -7,9 +7,16 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Your Events will line up here"
-        android:textSize="40dp"
+        android:text="@string/your_events_will_line_up_here"
+        android:textSize="40sp"
         android:textStyle="bold"
+        android:id="@+id/event_default"
         android:layout_centerInParent="true"
         android:gravity="center" />
+
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/event_recycler_view">
+    </android.support.v7.widget.RecyclerView>
 </RelativeLayout>
