--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -8,7 +8,14 @@
         android:text="Your Profiles will line up here"
         android:textSize="40dp"
         android:textStyle="bold"
+        android:id="@+id/profile_default"
         android:layout_centerInParent="true"
         android:gravity="center" />
 
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/profile_recycler_view">
+
+    </android.support.v7.widget.RecyclerView>
 </RelativeLayout>
