--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,7 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         android:visibility="gone"
-        android:src="@android:drawable/ic_menu_add" />
+        android:src="@drawable/ic_add_alert_50dp" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fabEvent"
